[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 390.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameTitile" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 390.0
margin_bottom = 14.0
text = "Fighting game"

[node name="MenuButton" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 390.0
margin_bottom = 422.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuButton"]
margin_top = 117.0
margin_right = 390.0
margin_bottom = 137.0
focus_next = NodePath("../OptionButton")
text = "Start"

[node name="PracticeButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuButton"]
margin_top = 167.0
margin_right = 390.0
margin_bottom = 187.0
focus_next = NodePath("../OptionButton")
text = "Practice"

[node name="OptionButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuButton"]
margin_top = 217.0
margin_right = 390.0
margin_bottom = 237.0
disabled = true
text = "Option"

[node name="EndButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuButton"]
margin_top = 267.0
margin_right = 390.0
margin_bottom = 287.0
text = "End"

[node name="VersionLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 426.0
margin_right = 390.0
margin_bottom = 440.0
text = "Ver 0.0.0"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 394.0
margin_right = 784.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_left = 163.0
margin_top = 188.0
margin_right = 227.0
margin_bottom = 252.0
texture = ExtResource( 2 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuButton/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuButton/PracticeButton" to="." method="_on_PracticeButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuButton/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuButton/EndButton" to="." method="_on_EndButton_pressed"]
